--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body><i class="fa-regular fa-face-smile"></i>
+    <h1>Hello, welcome to jny's first project</h1>
     <!-- Script -->
    <script src="script.js"></script> 
 </body>
